--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -135,12 +135,24 @@ body {
 
 
 /*ページトップのジャンボトロン1*/
+.jmb0wrap {
+    background: url(/Users/shin/Documents/Zoom/testsite/src/img/IMG_5914_R.JPG) center no-repeat;
+    background-size: cover;
+    border-radius: .0rem;
+    color: #FFF;
+    padding: 9rem 0rem 4rem 0rem;
+    height: 100vh;
+    width: 100%;
+}
+
 .jmb1wrap {
     background: url(https://images.unsplash.com/photo-1440330033336-7dcff4630cef?ixlib=rb-1.2.1&auto=format&fit=crop&w=2771&q=80) center no-repeat;
     background-size: cover;
     border-radius: .0rem;
     color: #FFF;
     padding: 9rem 0rem 4rem 0rem;
+    height: 100vh;
+    width: 100%;
 }
 
 @media only screen and (min-width:1100px) {
@@ -151,6 +163,7 @@ body {
         color: #FFF;
         padding: 9rem 0rem 0rem 0rem;
         height: 100vh;
+        width: 100%;
     }
 }
 
@@ -162,6 +175,7 @@ body {
         color: #FFF;
         padding: 9rem 0rem 0rem 0rem;
         height: 100vh;
+        width: 100%;
     }
 }
 
