--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -136,7 +136,7 @@ body {
 
 /*ページトップのジャンボトロン1*/
 .jmb0wrap {
-    background: url(https://raw.githubusercontent.com/ShinnosukeSatoh/testsite/main/src/img/IMG_5914_R.JPG) 60% no-repeat;
+    background: url(https://shinnosukesatoh.github.io/testsite/src/img/IMG_5914_R.JPG) 60% no-repeat;
     background-size: cover;
     border-radius: .0rem;
     color: #FFF;
