--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -136,7 +136,7 @@ body {
 
 /*ページトップのジャンボトロン1*/
 .jmb0wrap {
-    background: url(https://shinnosukesatoh.github.io/testsite/src/img/IMG_5914_R.JPG) 60% no-repeat;
+    background: url(https://user-images.githubusercontent.com/96368274/188546264-cc93f585-0f39-43f4-8856-8689f4a9154f.JPG) 60% no-repeat;
     background-size: cover;
     border-radius: .0rem;
     color: #FFF;
