--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -302,7 +302,7 @@ p.jmb2btn {
     display: flex;
 }
 
-.col-md-6 {
+.col-lg-6 {
     display: flex;
 }
 
@@ -394,7 +394,7 @@ p.jmb2btn {
     hyphens: manual;
 }
 
-@media only screen and (min-width:1100px) {
+@media only screen and (min-width:992px) {
     .box p:lang(en) {
         font-family: 'Inter', sans-serif;
         letter-spacing: -0.012em;
@@ -408,7 +408,7 @@ p.jmb2btn {
         font-family: 'Noto Sans JP', sans-serif;
         letter-spacing: -0.050em;
         font-weight: 400;
-        font-size: 15px;
+        font-size: 16px;
         text-indent: -0.02em;
         line-height: 1.6;
     }
@@ -447,7 +447,40 @@ p.jmb2btn {
 }
 
 /*ボタン*/
-.border_slide_btn {
+.border_slide_btn0 {
+    position: relative;
+    width: auto;
+    display: inline-block;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.border_slide_btn0:hover {
+    cursor: pointer;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.border_slide_btn0::after {
+    position: absolute;
+    bottom: -0.1em;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 3px;
+    background: #FFFFFF;
+    transform: scale(0, 1);
+    transform-origin: right top;
+    transition: transform .2s;
+}
+
+.border_slide_btn0:hover::after {
+    transform-origin: left top;
+    transform: scale(1, 1);
+}
+
+/*ボタン1*/
+.border_slide_btn1 {
     position: relative;
     width: auto;
     display: inline-block;
@@ -455,26 +488,26 @@ p.jmb2btn {
     text-decoration: none;
 }
 
-.border_slide_btn:hover {
+.border_slide_btn1:hover {
     cursor: pointer;
     color: #51C2BA;
     text-decoration: none;
 }
 
-.border_slide_btn::after {
+.border_slide_btn1::after {
     position: absolute;
     bottom: -0.1em;
     left: 0;
     content: '';
     width: 100%;
-    height: 3px;
+    height: 2px;
     background: #51C2BA;
     transform: scale(0, 1);
     transform-origin: right top;
     transition: transform .2s;
 }
 
-.border_slide_btn:hover::after {
+.border_slide_btn1:hover::after {
     transform-origin: left top;
     transform: scale(1, 1);
 }
