--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -584,3 +584,8 @@ div.image_circle {
     background-color: #FAFAFA;
     color: #2a2a2a;
 }
+
+html {
+    /* スムーススクロール */
+    scroll-behavior: smooth;
+}
