--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -539,6 +539,7 @@ div.image_circle {
     padding: 9rem 0rem 4rem 0rem;
     height: 100vh;
     width: 100%;
+    background-attachment: fixed;
 }
 
 /* 2ページ目の背景 */
