--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -53,6 +53,29 @@ body {
     }
 }
 
+/*フッター*/
+.site-footer {
+    display: flex;
+    width: 100%;
+    height: 32px;
+    position: fixed;
+    bottom: 5%;
+    z-index: 10000;
+}
+
+.site-footer p {
+    color: #FFF;
+    font-family: 'Cinzel', serif;
+    font-size: 12px;
+    letter-spacing: -0.015em;
+    line-height: 20px;
+    margin-top: 5px;
+    margin-right: 5px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.0);
+    -webkit-backdrop-filter: saturate(120%) blur(10px);
+    backdrop-filter: saturate(120%) blur(10px);
+}
 
 
 /*丸囲み*/
@@ -89,25 +112,6 @@ body {
     color: #FFFFFF;
     text-indent: 0.01em;
     margin-right: 0.1em;
-}
-
-
-
-/*フッター*/
-.site-footer {
-    display: flex;
-    width: 100%;
-    height: 80px;
-}
-
-.site-footer p {
-    font-family: 'Cinzel', serif;
-    font-size: 12px;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 
@@ -644,6 +648,28 @@ div.image_circle {
 
 .section:nth-of-type(99n-94)::before {
     background-color: rgba(0, 0, 0, .60);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    content: ' ';
+}
+
+/* 6ページ目の背景 */
+.section:nth-of-type(99n-93) {
+    scroll-snap-align: start;
+    background: url(https://user-images.githubusercontent.com/96368274/188774154-9417eb55-e348-4523-994a-37dfb520f0aa.JPG) 65% no-repeat;
+    background-size: cover;
+    border-radius: .0rem;
+    color: #FFF;
+    padding: 4rem 0rem 4rem 0rem;
+    height: 100vh;
+    width: 100%;
+}
+
+.section:nth-of-type(99n-93)::before {
+    background-color: rgba(0, 0, 0, .75);
     position: absolute;
     top: 0;
     right: 0;
