--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -336,6 +336,17 @@ h1.maintext {
     position: relative;
 }
 
+.container p:lang(jp) {
+    font-family: 'Inter', sans-serif;
+    letter-spacing: -0.020em;
+    font-size: 15px;
+    font-weight: 400;
+    color: #FFF;
+    text-indent: -0.03em;
+    line-height: 1.5;
+    position: relative;
+}
+
 .box span {
     display: inline-block;
 }
@@ -502,24 +513,6 @@ h1.maintext {
     text-decoration: none;
 }
 
-.border_slide_btn1::after {
-    position: absolute;
-    bottom: -0.02em;
-    left: 0;
-    content: '';
-    width: 100%;
-    height: 2px;
-    background: #FFFFFF;
-    transform: scale(0, 1);
-    transform-origin: right top;
-    transition: transform .2s;
-}
-
-.border_slide_btn1:hover::after {
-    transform-origin: left top;
-    transform: scale(1, 1);
-}
-
 /* 丸いプロフィール画像 */
 div.image_circle {
     position: relative;
@@ -551,17 +544,28 @@ div.image_circle {
     position: relative;
     display: flex;
     scroll-snap-align: start;
-    background: url(https://user-images.githubusercontent.com/96368274/188546264-cc93f585-0f39-43f4-8856-8689f4a9154f.JPG) 60% no-repeat;
+    background: url(https://user-images.githubusercontent.com/96368274/188843993-14b4b5a1-48f8-446d-ae37-19b21cf3aeaa.jpg) 45% no-repeat;
     background-size: cover;
     border-radius: .0rem;
     color: #FFF;
-    padding: 9rem 0rem 4rem 0rem;
+    padding: 2.5rem 0rem 4rem 0rem;
     height: 100vh;
     width: 100%;
 }
 
+.section:nth-of-type(99n-92)::before {
+    background-color: rgba(0, 0, 0, .6);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    content: ' ';
+}
+
 /* 1ページ目の背景 */
 .section:nth-of-type(99n-98) {
+    position: relative;
     display: flex;
     scroll-snap-align: start;
     background: url(https://user-images.githubusercontent.com/96368274/188546264-cc93f585-0f39-43f4-8856-8689f4a9154f.JPG) 60% no-repeat;
@@ -575,6 +579,7 @@ div.image_circle {
 
 /* 2ページ目の背景 */
 .section:nth-of-type(99n-97) {
+    position: relative;
     scroll-snap-align: start;
     background: url(https://user-images.githubusercontent.com/96368274/188769880-e4075f1e-ff2e-46e3-9e1c-2039086ba59b.JPG) 73% no-repeat;
     background-size: cover;
@@ -597,6 +602,7 @@ div.image_circle {
 
 /* 3ページ目の背景 */
 .section:nth-of-type(99n-96) {
+    position: relative;
     scroll-snap-align: start;
     /* background: url(https://user-images.githubusercontent.com/96368274/188647678-57b54f7d-c2fc-44ad-9c22-d6c954c4983a.jpg) 50% no-repeat; */
     background: url(https://user-images.githubusercontent.com/96368274/188645195-30423b04-e496-4df0-8941-45f8ed9504e1.jpg) 50% no-repeat;
@@ -620,6 +626,7 @@ div.image_circle {
 
 /* 4ページ目の背景 */
 .section:nth-of-type(99n-95) {
+    position: relative;
     scroll-snap-align: start;
     background: url(https://user-images.githubusercontent.com/96368274/188771540-734c8607-8c5f-49a5-8ef4-5e788802bb1a.jpeg) 35% no-repeat;
     background-size: cover;
@@ -643,6 +650,7 @@ div.image_circle {
 
 /* 5ページ目の背景 */
 .section:nth-of-type(99n-94) {
+    position: relative;
     scroll-snap-align: start;
     background: url(https://user-images.githubusercontent.com/96368274/188768760-0e22c06b-3912-4681-aced-cbe18a5d2dd7.JPG) 73% no-repeat;
     background-size: cover;
@@ -665,6 +673,7 @@ div.image_circle {
 
 /* 6ページ目の背景 */
 .section:nth-of-type(99n-93) {
+    position: relative;
     scroll-snap-align: start;
     background: url(https://user-images.githubusercontent.com/96368274/188774154-9417eb55-e348-4523-994a-37dfb520f0aa.JPG) 65% no-repeat;
     background-size: cover;
